tests/invalid/occurs1.exp
occurs1.p:11: Type error: "int" and "type_2(int)" are not the same
